@@ -15,6 +15,8 @@ export(did_means)
 export(coefplot)
 # small funs
 export(coeftable, ctable, se, tstat, pvalue)
+# dof
+export(dof)
 # Lag related
 export(panel, unpanel, f, l)
 # interactions
